--- a/example/index.html
+++ b/example/index.html
@@ -1,1 +1,3 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>vector2d-extended</title><script src="../index.js"></script><script type="text/javascript" src="./main.js"></script></head><body></body></html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>vector2d-extended</title><script src="../index.js"></script><script type="text/javascript" src="./main.js"></script><script type="text/javascript" src="./add.js"></script></head><body>
+  <button onclick="gameLoop()">Обновить</button>
+</body></html>
