Сделал более хорошие и интерактивные примеры

--- a/example/index.html
+++ b/example/index.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>vector2d-extended</title><script src="../index.js"></script><script type="text/javascript" src="./main.js"></script><script type="text/javascript" src="./add.js"></script></head><body>
-  <button onclick="gameLoop()">Обновить</button>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>vector2d-extended</title><script src="../index.js"></script><script type="text/javascript" src="./main.js"></script><script type="text/javascript" src="./Mouse.js"></script><script type="text/javascript" src="./add.js"></script></head><body>
+  <button onclick="nextExample()">Следующий пример</button>
 </body></html>
